fixed correction text color for dark mode

--- a/ts/packages/shell/src/renderer/assets/styles.less
+++ b/ts/packages/shell/src/renderer/assets/styles.less
@@ -53,6 +53,11 @@ body {
       color: white;
     }
   }
+
+  .action-text {
+    color: lightgray;
+  }
+
 }
 
 .wrapper {
